--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   google_fonts:
   lottie:
   animated_text_kit:
-  flutter_advanced_calendar:
+  date_picker_timeline: ^1.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
